[package]
name = "myip"
version = "1.1.0"
authors = ["Vyacheslav Konovalov <🦀vk@protonmail.com>"]
description = "Simple command-line tool to get your external IP address."
homepage = "https://github.com/crabvk/myip"
repository = "https://github.com/crabvk/myip"
readme = "README.md"
keywords = ["external-ip", "ip-address", "network"]
license = "MIT"
categories = ["command-line-utilities"]
edition = "2018"

[dependencies]
dns = { git = "https://github.com/ogham/dog" }
dns-transport = { git = "https://github.com/ogham/dog" }
maxminddb = "0.21"
ansi_term = "0.12"
serde = "1.0"
serde_json = "1.0"
lexopt = "0.2"
atty = "0.2"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
