[package]
name = "myip"
version = "1.2.0"
authors = ["Vyacheslav Konovalov <crabvk@protonmail.com>"]
description = "Simple command-line tool to get your external IP address."
homepage = "https://github.com/crabvk/myip"
repository = "https://github.com/crabvk/myip"
readme = "README.md"
keywords = ["external-ip", "ip-address", "network"]
license = "MIT"
categories = ["command-line-utilities"]
edition = "2018"

[dependencies]
trust-dns-resolver = "0.23.0"
maxminddb = "0.23.0"
ansi_term = "0.12"
serde = "1.0"
serde_json = "1.0"
lexopt = "0.3.0"
atty = "0.2"
rand = "0.8"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
